# brave-core

./: package-lock.json  package.json
android/: brave_java_resources.gni
app/: generated_resources.grd  generated_resources_override.grd  settings_strings.grdp
browser/: BUILD.gn  about_flags.cc  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/brave_ads/delegate/: BUILD.gn  ads_service_delegate_impl.cc  ads_service_delegate_impl.h  service_sandbox_type.h
components/: commerce_strings.grdp
ios/: BUILD.gn
patches/: base-BUILD.gn.patch  chrome-android-BUILD.gn.patch  chrome-android-java-res-layout-custom_tabs_toolbar.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-tabbed_mode-TabbedRootUiCoordinator.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-browsing_data-chrome_browsing_data_remover_delegate.h.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-webui-settings-settings_localized_strings_provider.cc.patch  chrome-test-BUILD.gn.patch  components-omnibox-browser-autocomplete_controller.cc.patch  content-browser-renderer_host-navigation_request.cc.patch  content-browser-renderer_host-render_frame_host_impl.cc.patch  content-browser-web_contents-web_contents_impl.cc.patch  content-renderer-render_frame_impl.cc.patch  content-renderer-render_thread_impl.cc.patch  ios-chrome-app-BUILD.gn.patch  (+6 more)
(+236 files in other folders)
