# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("delegate") {
  sources = [
    "ads_service_delegate_impl.cc",
    "ads_service_delegate_impl.h",
    "service_sandbox_type.h",
  ]

  deps = [
    "//base",
    "//brave/app:brave_generated_resources_grit",
    "//brave/components/brave_ads/browser",
    "//brave/components/brave_ads/core",
    "//brave/components/services/bat_ads:lib",
    "//chrome/browser:browser_process",
    "//chrome/browser/profiles:profile",
    "//chrome/browser/ui",
    "//content/public/browser",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
  ]
}
